compiler/testData/cli/jvm/classAndTraitClash.out
warning: -Xuse-old-backend is deprecated and will be removed in a future release
compiler/testData/cli/jvm/classAndTraitClash.kt:3:1: error: duplicate JVM class name 'test/T1$DefaultImpls' generated from: `T1$DefaultImpls`, T1
interface  T1 {
^
compiler/testData/cli/jvm/classAndTraitClash.kt:7:1: error: duplicate JVM class name 'test/T1$DefaultImpls' generated from: `T1$DefaultImpls`, T1
class `T1$DefaultImpls` {
^
COMPILATION_ERROR