compiler/testData/cli/jvm/classAndTraitClash.kt
package test

interface  T1 {

}

class `T1$DefaultImpls` {

}